2008-04-08  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/map.cpp, src/gui/viewport.cpp, src/tileset.h, src/map.h,
	src/resources/imageset.cpp, src/resources/mapreader.cpp,
	src/resources/imageset.h, src/resources/mapreader.h,
	data/maps/new_3-1.tmx, data/maps/new_1-1.tmx: Implemented support for
	an arbitrary number of map layers. The only layer requirement for map
	layers are now that the fringe layer is called "Fringe" and that the
	collision layer is called "Collision".

2008-04-07  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/particle.cpp, src/utils/xml.cpp, src/utils/xml.h,
	src/resources/mapreader.cpp, src/resources/spritedef.cpp,
	src/resources/npcdb.h, src/resources/monsterdb.cpp,
	src/resources/itemdb.cpp, src/resources/npcdb.cpp,
	src/resources/spritedef.h: Added XML::Document class which simplifies
	parsing an XML document and automatically cleans it up again.
	* src/resources/spritedef.cpp, src/resources/spritedef.h,
	data/graphics/sprites/item008.xml: Added support for basing one sprite
	definition on another by including it.

2008-04-03  Philipp Sehmisch  <tmw@crushnet.org>

	* src/localplayer.cpp: Spawning a particle effect whenever the client
	sends a move message to the server to visualize the extreme flooding
	of the server with move message when the user moves with the mouse.

2008-04-03  David Athay  <ko2fan@gmail.com>

	* src/localplayer.cpp, src/gui/popupmenu.cpp, src/localplayer.h,
	tmw.cbp: Added ability to right click a player and invite to guild.
	* src/gui/connection.cpp, src/gui/login.cpp, 
	src/gui/char_select.cpp, src/main.cpp: Added patch from 
	postalworker bug id=117 to fix cancel connecting to a sick server.
	* src/net/guildhandler.cpp, src/net/protocol.h: Added updating guild
	member list.

2008-04-01  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/gui/guildwindow.h, src/gui/chat.cpp,
	src/gui/guildwindow.cpp, src/net/guildhandler.cpp: Fixed up chat 
	and guilds.